--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -123,7 +123,8 @@ button:hover {
 }
 
 #clock {
-    background-color: #64727D;
+    background-color: rgba(0, 0, 0, 0.0);
+    font-size: 16px;
 }
 
 #battery {
